--- a/UIPetition/BlazorPetition/BlazorPetition.csproj
+++ b/UIPetition/BlazorPetition/BlazorPetition.csproj
@@ -15,6 +15,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
+
+  <ItemGroup>
     <PackageReference Include="Blazor.Bootstrap" Version="3.0.0-preview.3" />
   </ItemGroup>
 
